samples/bookmap/invalid/R15.dita
<?xml version="1.0" encoding="UTF-8"?>
<bookmap>
  <booktitle><booklibrary>L</booklibrary><mainbooktitle>T</mainbooktitle></booktitle>
  <bookmeta/>
  <frontmatter/>
  <chapter href="c.dita">
    <topicmeta/> {/* Missing navtitle in topicmeta */}
  </chapter>
</bookmap>